--- a/frontend/css_files/index.css
+++ b/frontend/css_files/index.css
@@ -9,7 +9,7 @@ body {
   padding: 20px;
   color: #39393a;
   height: 500px;
-  background-image: url('../images/bgimage2.jpg');
+  background-image: url('../images/bgimage.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
