--- a/frontend/css_files/common.css
+++ b/frontend/css_files/common.css
@@ -1,4 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@font-face {
+  font-family: "Poppins";
+  src: url("fonts/poppins-v22-latin-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("fonts/poppins-v22-latin-300.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("fonts/poppins-v22-latin-500.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("fonts/poppins-v22-latin-600.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+}
+
 
 :root {
   --primary-blue: #005dc0;
