--- a/frontend/css_files/common.css
+++ b/frontend/css_files/common.css
@@ -624,9 +624,7 @@ input:focus {
 
   .popup {
     height: 600px;
-    width: 95%;
-    max-width: 150px;
-    margin: 20px auto;
+    max-width: 85%;
     padding: 20px 10px;
   }
 
