--- a/frontend/css_files/product.css
+++ b/frontend/css_files/product.css
@@ -47,7 +47,7 @@ body {
 .productListImg {
   position: relative;
   width: 90%;
-  object-fit: contain;
+  object-fit: cover;
   margin: auto;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
